--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.1",
     "express-session": "~1.17.1",
     "mongodb": "^3.6.1",
+    "mongoose": "^8.4.1",
     "passport": "^0.4.1",
     "passport-github": "~1.1.0",
     "passport-local": "~1.0.0",
